<FrameLayout
  android:id="@+id/mainPanel"
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  	
    <com.ismaroik.powercrux.Spinner 
        android:id="@+id/spinner" 
        android:layout_width="match_parent" 
        android:layout_height="match_parent" >
    </com.ismaroik.powercrux.Spinner>
    
    <RelativeLayout 
        android:id="@+id/nextRoundPanel" 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:visibility="invisible">
        <TextView
	        android:id="@+id/txtAverageFps"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:visibility="invisible" 
	        android:layout_marginTop="100dp"/>
        <TextView
	        android:id="@+id/txtReactionTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/txtAverageFps"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:visibility="invisible" />
        <ImageButton
            android:id="@+id/btnNextRoud"
            android:layout_width="130dip"
            android:layout_height="130dip"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/btnNextRoud"
            android:focusableInTouchMode="false"
            android:onClick="btnNextRoud"
            android:scaleType="fitCenter"
            android:text="@string/btnNextRoud"
            android:background="@null" />
		<com.ismaroik.powercrux.RotableImageView
			android:id="@+id/player1ScoreImg"
			android:contentDescription="@string/playerDesc"
			android:layout_width="130dip"
			android:layout_height="130dip"
			android:scaleType="fitCenter"/>
		<com.ismaroik.powercrux.RotableImageView
			android:id="@+id/player2ScoreImg"
			android:contentDescription="@string/playerDesc"
			android:layout_width="130dip"
			android:layout_height="130dip"
			android:scaleType="fitCenter"/>
		<com.ismaroik.powercrux.RotableImageView
			android:id="@+id/player3ScoreImg"
			android:contentDescription="@string/playerDesc"
			android:layout_width="130dip"
			android:layout_height="130dip"
			android:scaleType="fitCenter"/>
		<com.ismaroik.powercrux.RotableImageView
			android:id="@+id/player4ScoreImg"
			android:contentDescription="@string/playerDesc"
			android:layout_width="130dip"
			android:layout_height="130dip"
			android:scaleType="fitCenter"/>
    </RelativeLayout>
    
    <com.ismaroik.powercrux.PlayerScoreOverlayView
		    android:id="@+id/playerScoreOverlayView" 
	        android:layout_width="match_parent" 
	        android:layout_height="match_parent"
	        android:visibility="invisible">
	</com.ismaroik.powercrux.PlayerScoreOverlayView>
    
    <RelativeLayout
        android:id="@+id/backScreenPanel" 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:visibility="invisible">
        <TextView
	        android:id="@+id/txtBackScreenHidden"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:visibility="invisible" 
	        android:layout_marginTop="100dp"/>
        <ImageButton
            android:id="@+id/btnContinue"
            android:layout_width="172dp"
            android:layout_height="56dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/btnContinue"
            android:focusableInTouchMode="false"
            android:onClick="btnContinue"
            android:scaleType="fitCenter"
            android:text="@string/btnContinue"
            android:background="@drawable/playgroundcontinue_selector" />
        <ImageButton
            android:id="@+id/btnRestart"
            android:layout_width="172dp"
            android:layout_height="70dp"
			android:layout_above="@id/btnContinue"
			android:layout_centerHorizontal="true"
            android:contentDescription="@string/btnRestart"
            android:focusableInTouchMode="false"
            android:onClick="btnRestart"
            android:scaleType="fitCenter"
            android:text="@string/btnRestart"
            android:background="@drawable/playgroundrestart_selector" />
        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="172dp"
            android:layout_height="70dp"
			android:layout_below="@id/btnContinue"
			android:layout_centerHorizontal="true"
            android:contentDescription="@string/btnMenu"
            android:focusableInTouchMode="false"
            android:onClick="btnMenu"
            android:scaleType="fitCenter"
            android:text="@string/btnMenu"
            android:background="@drawable/playgroundmenu_selector" />
    </RelativeLayout>
    
    <com.ismaroik.powercrux.EndScreenPanel
        android:id="@+id/endScreenPanel" 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:visibility="invisible">
        <TextView
	        android:id="@+id/txtEndScreenHidden"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:visibility="invisible" 
	        android:layout_marginTop="100dp"/>
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_height="match_parent" 
            android:layout_width="match_parent">
		        <LinearLayout
		            android:orientation="horizontal"
		            android:layout_weight="1" 
		            android:layout_height="0dp" 
		            android:baselineAligned="false"
		            android:layout_width="match_parent">
		            <RelativeLayout
		                android:layout_weight="1" 
			            android:layout_height="match_parent" 
			            android:layout_width="0dp"
			            android:layout_margin="5dp"
			            android:background="@drawable/playground_endscreenpanel">
		                <ImageView
	                     	android:id="@+id/cupTopLeft"
				            android:layout_height="123dp"
				            android:layout_width="120dp"
							android:layout_centerHorizontal="true"
							android:layout_marginTop="25dp"				
							android:contentDescription="@string/winnercup"
				            android:visibility="invisible"
		                    />
		            </RelativeLayout>
		            <RelativeLayout
		                android:layout_weight="1" 
			            android:layout_height="match_parent" 
			            android:layout_width="0dp"
			            android:layout_margin="5dp"
			            android:background="@drawable/playground_endscreenpanel">
		                <ImageView
	                     	android:id="@+id/cupTopRight"
				            android:layout_height="123dp"
				            android:layout_width="120dp"
				            android:layout_marginTop="25dp"
							android:layout_centerHorizontal="true"
							android:contentDescription="@string/winnercup"
				            android:visibility="invisible"
		                    />
		            </RelativeLayout>
		        </LinearLayout>
		        <LinearLayout
		            android:orientation="horizontal" 
		            android:layout_weight="1" 
		            android:layout_height="0dp" 
		            android:baselineAligned="false"
		            android:layout_width="match_parent">
		            <RelativeLayout
		                android:layout_weight="1" 
			            android:layout_height="match_parent" 
			            android:layout_width="0dp"
			            android:layout_margin="5dp"
			            android:background="@drawable/playground_endscreenpanel">
		                <ImageView
	                     	android:id="@+id/cupBottomLeft"
				            android:layout_height="123dp"
				            android:layout_width="120dp"
				            android:layout_marginBottom="25dp"
				            android:layout_alignParentBottom="true"
							android:layout_centerHorizontal="true"
							android:contentDescription="@string/winnercup"
				            android:visibility="invisible"
		                    />
		            </RelativeLayout>
		            <RelativeLayout
		                android:layout_weight="1" 
			            android:layout_height="match_parent" 
			            android:layout_width="0dp"
			            android:layout_margin="5dp"
			            android:background="@drawable/playground_endscreenpanel" >
		                <ImageView
	                     	android:id="@+id/cupBottmRight"
				            android:layout_height="123dp"
				            android:layout_width="120dp"
				            android:layout_marginBottom="25dp"
				            android:layout_alignParentBottom="true"
							android:layout_centerHorizontal="true"
							android:contentDescription="@string/winnercup"
				            android:visibility="invisible"
		                    />
		            </RelativeLayout>
		        </LinearLayout>
    	</LinearLayout>
        <Button
            android:id="@+id/center"
            android:layout_width="172dp"
            android:layout_height="10dp"
            android:layout_centerVertical="true"
			android:layout_centerHorizontal="true"
			android:visibility="invisible"
            />
        <ImageButton
            android:id="@+id/btnEndScreenRestart"
            android:layout_width="172dp"
            android:layout_height="70dp"
			android:layout_above="@id/center"
			android:layout_centerHorizontal="true"
            android:contentDescription="@string/btnRestart"
            android:focusableInTouchMode="false"
            android:onClick="btnRestart"
            android:scaleType="fitCenter"
            android:text="@string/btnRestart"
            android:background="@drawable/playgroundrestart_selector" />
        <ImageButton
            android:id="@+id/btnEndScreenMenu"
            android:layout_width="172dp"
            android:layout_height="70dp"
			android:layout_below="@id/center"
			android:layout_centerHorizontal="true"
            android:contentDescription="@string/btnMenu"
            android:focusableInTouchMode="false"
            android:onClick="btnMenu"
            android:scaleType="fitCenter"
            android:text="@string/btnMenu"
            android:background="@drawable/playgroundmenu_selector" />
    </com.ismaroik.powercrux.EndScreenPanel>
</FrameLayout>
